test/models/vote_response.go
// Code generated by go-swagger; DO NOT EDIT.

package models

// This file was generated by the swagger tool.
// Editing this file might prove futile when you re-run the swagger generate command

import (
	"encoding/json"

	"github.com/go-openapi/errors"
	"github.com/go-openapi/strfmt"
	"github.com/go-openapi/swag"
	"github.com/go-openapi/validate"
)

// VoteResponse vote response
//
// swagger:model VoteResponse
type VoteResponse struct {

	// down votes
	DownVotes int64 `json:"downVotes,omitempty"`

	// error
	Error string `json:"error,omitempty"`

	// res code
	// Enum: [0 3 4 5]
	ResCode int64 `json:"resCode,omitempty"`

	// up votes
	UpVotes int64 `json:"upVotes,omitempty"`
}

// Validate validates this vote response
func (m *VoteResponse) Validate(formats strfmt.Registry) error {
	var res []error

	if err := m.validateResCode(formats); err != nil {
		res = append(res, err)
	}

	if len(res) > 0 {
		return errors.CompositeValidationError(res...)
	}
	return nil
}

var voteResponseTypeResCodePropEnum []interface{}

func init() {
	var res []int64
	if err := json.Unmarshal([]byte(`[0,3,4,5]`), &res); err != nil {
		panic(err)
	}
	for _, v := range res {
		voteResponseTypeResCodePropEnum = append(voteResponseTypeResCodePropEnum, v)
	}
}

// prop value enum
func (m *VoteResponse) validateResCodeEnum(path, location string, value int64) error {
	if err := validate.Enum(path, location, value, voteResponseTypeResCodePropEnum); err != nil {
		return err
	}
	return nil
}

func (m *VoteResponse) validateResCode(formats strfmt.Registry) error {

	if swag.IsZero(m.ResCode) { // not required
		return nil
	}

	// value enum
	if err := m.validateResCodeEnum("resCode", "body", m.ResCode); err != nil {
		return err
	}

	return nil
}

// MarshalBinary interface implementation
func (m *VoteResponse) MarshalBinary() ([]byte, error) {
	if m == nil {
		return nil, nil
	}
	return swag.WriteJSON(m)
}

// UnmarshalBinary interface implementation
func (m *VoteResponse) UnmarshalBinary(b []byte) error {
	var res VoteResponse
	if err := swag.ReadJSON(b, &res); err != nil {
		return err
	}
	*m = res
	return nil
}
